[metadata]
# This includes the license file in the wheel.
license_file = LICENSE

[tool:pytest]
# Deterministic ordering for tests; useful for pytest-xdist.
env =
	PYTHONHASHSEED=0
filterwarnings =
    ignore:inspect.getargspec:DeprecationWarning:tensorflow
    ignore::pytest.PytestUnknownMarkWarning
		# Tensorflow internal warnings
		ignore:builtin type EagerTensor has no __module__ attribute:DeprecationWarning
		ignore:The binary mode of fromstring is deprecated:DeprecationWarning
		ignore::FutureWarning:tensorflow
		# Gym warnings
		ignore:Parameters to load are deprecated.:DeprecationWarning
		ignore:the imp module is deprecated in favour of importlib:PendingDeprecationWarning
